5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4372/executions/1577_994.log
== TEST (2019-03-14 18:53:21) 
-- CODE:
print("")
a= 5
b= 7
print(a+b)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:09:57) 
-- CODE:
print("")
a= Universidade
b= Federal
c= do
d= Amazonas
print(a+b+c+d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a= Universidade
NameError: name 'Universidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:10:28) 
-- CODE:
print("")
a=Universidade
b= Federal
c= do
d= Amazonas
print(a+b+c+d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a=Universidade
NameError: name 'Universidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:13:26) 
-- CODE:
print("Universidade Federal do Amazonas")

-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:22:59) 
-- CODE:
print("Universidade Federal do Amazonas")

-- EXECUTION TIME:
0.192264
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
